Fix header styles on small devices

--- a/src/components/ui/header/Common.module.css
+++ b/src/components/ui/header/Common.module.css
@@ -13,7 +13,7 @@
   font-family: var(--mono);
   color: #302a27;
   text-decoration: none;
-  padding: 8px 16px;
+  padding: 8px;
   font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
@@ -30,8 +30,9 @@
 .headerButton:hover {
   color: var(--primary);
 }
-.menu {
+.nav {
   padding: 0;
+  margin: 8px 0;
 }
 
 @media screen and (min-width: 1025px) {
